# fixtures-rs

./: Cargo.toml  README.md
fixtures/: Cargo.toml  LICENSE-MIT  README.md
fixtures/examples/: basic_usage.rs  complex_ignore_config.rs  complex_legacy_ignore_config.rs  complex_signatures.rs  criterion.rs  ignore_attributes.rs  ignore_globs.rs  invalid_identifiers.rs  legacy_ignore_globs.rs  multiple_fixtures.rs  negative_globs.rs
fixtures/src/: build.rs  lib.rs
fixtures/tests/: snapshot.rs
fixtures/tests/snapshots/: snapshot__basic_usage.snap  snapshot__complex_ignore_config.snap  snapshot__complex_legacy_ignore_config.snap  snapshot__complex_signatures.snap  snapshot__criterion.snap  snapshot__ignore_attributes.snap  snapshot__ignore_globs.snap  snapshot__invalid_identifiers.snap  snapshot__legacy_ignore_globs.snap  snapshot__multiple_fixtures.snap  snapshot__negative_globs.snap
fixtures_proc/: Cargo.toml  README.md
fixtures_proc/src/: ignore_matcher.rs  lib.rs
fixtures_proc/src/parse/: args.rs  assignment.rs  ignore_args.rs  ignore_attribute.rs  ignore_config.rs  legacy_ignore_config.rs  mod.rs  option_assignment.rs  paths.rs  spanned.rs
fixtures_proc/src/utils/: attribute.rs
playground/: Cargo.toml  build.rs
playground/fixtures/: case1.txt  case2.txt
playground/src/: main.rs
