[package]
name = "fixtures"
version = "2.3.3"
edition = "2021"
authors = ["Ben Heidemann <ben@heidemann.dev>"]
description = "Run tests against fixtures"
categories = ["development-tools::testing"]
repository = "https://github.com/bcheidemann/fixtures-rs"
readme = "README.md"
homepage = "https://github.com/bcheidemann/fixtures-rs"
license = "MIT OR Apache-2.0"

[dependencies]
fixtures_proc = { "path" = "../fixtures_proc", version = "2" }

[dev-dependencies]
indoc = "2.0.6"
insta = { version = "1.43.2" }
