[package]
name = "fixtures_proc"
version = "1.0.2"
edition = "2021"
authors = ["Ben Heidemann <ben@heidemann.dev>"]
description = "Run tests against fixtures"
categories = ["development-tools::testing"]
repository = "https://github.com/bcheidemann/fixtures-rs"
readme = "README.md"
homepage = "https://github.com/bcheidemann/fixtures-rs"

[lib]
proc-macro = true

[dependencies]
globwalk = "0.9.1"
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = { version = "2.0.33", features = [
    "full",
    "parsing",
    "extra-traits",
    "visit",
    "visit-mut",
] }
