[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixtures = { path = "../fixtures", version = "1" }

[build-dependencies]
fixtures = { path = "../fixtures", version = "1" }
